--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,20 @@
+* {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 body {
   padding: 20px;
-  height: 150vh;
+  zoom: 80%;
 }
 .header {
   display: grid;
   grid-template-columns: 2fr 1fr;
   gap: 20px;
-  margin-bottom: 20px;
 }
 .header #map {
   height: 100%;
   cursor: pointer;
+  outline-color: white;
   border-radius: 10px;
 }
 .header .form_container {
@@ -20,7 +24,7 @@ body {
   align-items: center;
 }
 .header form {
-  height: 100%;
+  height: 90%;
   max-width: 600px;
   width: 100%;
   margin: auto;
@@ -54,43 +58,40 @@ body {
   gap: 10px;
 }
 /* NOTES AREA */
-.notes_area {
+.notesArea {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
   gap: 10px;
 }
-.notes_area .notes_container {
+.notesArea .notesContainer {
   display: flex;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 10px;
   overflow: hidden;
 }
-.notes_area .components {
+.notesArea .noteTools {
   display: flex;
   flex-direction: column;
 }
-.notes_area .components button {
+.notesArea .noteTools button {
   border: transparent;
   height: 40px;
   width: 40px;
 }
-.notes_area .components .edit {
+.notesArea .noteTools .edit {
   background: url(./miscellaneous/edit.svg) no-repeat center transparent;
 }
-/* .notes_area .components .edit.checked {
-  background: url(./miscellaneous/done.svg) no-repeat center transparent;
-} */
-.notes_area .components .delete {
+.notesArea .noteTools .delete {
   background: url(./miscellaneous/delete.svg) no-repeat center transparent;
 }
-.notes_area .components .share {
+.notesArea .noteTools .share {
   background: url(./miscellaneous/share.svg) no-repeat center transparent;
 }
-.notes_area .components .edit:hover::after,
-.notes_area .components .delete:hover::after,
-.notes_area .components .share:hover::after {
+.notesArea .noteTools .edit:hover::after,
+.notesArea .noteTools .delete:hover::after,
+.notesArea .noteTools .share:hover::after {
   display: block;
   position: absolute;
   border-radius: 10px;
@@ -100,25 +101,24 @@ body {
   margin-top: -20px;
   margin-left: -65px;
 }
-.notes_area .components .edit:hover::after {
+.notesArea .noteTools .edit:hover::after {
   content: 'Edit';
 }
-.notes_area .components .delete:hover::after {
+.notesArea .noteTools .delete:hover::after {
   content: 'Delete';
 }
-.notes_area .components .share:hover::after {
+.notesArea .noteTools .share:hover::after {
   content: 'Share';
 }
-.notes_area .notes {
+.notesArea .notes {
   line-height: 1.5;
   flex: 1;
   word-wrap: break-word;
   border-radius: 10px;
 }
-.notes_area .notes p {
+.notesArea .notes p {
   padding: 0;
   margin: 0;
-  font-size: 0.5rem;
 }
 /* SEARCH BOX */
 .group {
@@ -127,7 +127,7 @@ body {
   align-items: center;
   position: relative;
   max-width: 100%;
-  margin-bottom: 20px;
+  margin: 20px 0 20px 0;
 }
 #searchInput {
   width: 100%;
@@ -161,7 +161,7 @@ body {
 }
 /* MEDIA QUERIES */
 @media screen and (max-width: 480px) {
-  .notes_area {
+  .notesArea {
     grid-template-columns: repeat(1, 1fr);
     gap: 5px;
   }
@@ -177,7 +177,7 @@ body {
 }
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
-  .notes_area {
+  .notesArea {
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
   }
